--- a/master/master.ipynb
+++ b/master/master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "65cd24a3",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6cd56fd4",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.0.0.88\n"
+      "10.200.71.141\n"
      ]
     }
    ],
@@ -39,7 +39,7 @@
     "\n",
     "# Enter the IPs of the servers in order: [Server1   Server 2   Server 3]\n",
     "#IP = ['10.200.133.129','10.200.133.129','10.200.133.129']\n",
-    "IP = ['10.0.0.88', '10.0.0.88', '10.0.0.88']\n",
+    "IP = ['10.200.71.141', '10.200.71.141', '10.200.71.141']\n",
     "port1 = 8088\n",
     "# This are the ports of the respective srvers port: [Server1   Server 2   Server 3] at whiich master node will connect \n",
     "port = [3333, 3334, 3335]\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e1a02e46",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "3aff0af9",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "01f43b08",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "da0be8d2",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d2bef101",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        "'def change_permission():\\n    username= str(input())\\n    file_name= str(input())\\n\\n    lock = threading.Lock()\\n\\n    #permission = get_permission(username, file_name)\\n    \\n    #  Give the actual path of the permission\\'s excel sheet present in your devise in variable given below\\n    \\n    file_path = r\\'permissions.xlsx\\'\\n    permissions_dataframe = pd.read_excel(file_path, index_col=0)\\n\\n    permission = permissions_dataframe.loc[username][file_name]\\n\\n    if permission == \"owner\":\\n        print(\"Enter the user whose permission needs to be changed\")\\n        user_name_to_change_permission = str(input())\\n        print(\"Enter the updated permission\")\\n        updated_permission = str(input())\\n\\n        permissions_dataframe.loc[user_name_to_change_permission][file_name] = updated_permission\\n\\n        print(permissions_dataframe)\\n\\n        lock.acquire()\\n        with pd.ExcelWriter(file_path, engine=\"openpyxl\", mode=\"w\", if_sheet_exists=\\'replace\\') as writer:\\n            permissions_dataframe.to_excel(writer, \\'Sheet1\\', index=True)\\n\\n        lock.release()\\n    else:\\n        print(\"You are not authorized to modify the permission\")'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "86707fe3",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "91eb44f2",
    "metadata": {},
    "outputs": [],
@@ -258,8 +258,6 @@
     "#  Getting the data from the client \n",
     "\n",
     "    while True:\n",
-    "        schedule.run_pending()\n",
-    "        time.sleep(1)\n",
     "        data1 = conn.recv(buffer)\n",
     "        content = pickle.loads(data1)\n",
     "        operation = content[0]\n",
@@ -356,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "a0373f4f",
    "metadata": {},
    "outputs": [],
@@ -400,58 +398,61 @@
      "text": [
       "Server listening upto 995 connections\n",
       "\n",
-      "Total Active connections 7I'm running on thread <Thread(Thread-59, started 28900)>\n",
-      "\n",
-      "I'm running on thread <Thread(Thread-60, started 38536)>\n",
-      "I'm running on thread <Thread(Thread-61, started 38360)>\n",
-      "I'm running on thread <Thread(Thread-62, started 40036)>\n",
-      "I'm running on thread <Thread(Thread-63, started 20088)>\n"
+      "Total Active connections 6\n",
+      "success\n",
+      "dhruv\n",
+      "           IqMd IqEfdG4=\n",
+      "Username                \n",
+      "dhruv     owner    owner\n",
+      "payodhi     not      not\n",
+      "dharani     not      not\n",
+      "surya       not      not\n",
+      "chandu      not      not\n",
+      "random      not      not\n",
+      "dhruv\n",
+      "           IqMd IqEfdG4=\n",
+      "Username                \n",
+      "dhruv     owner    owner\n",
+      "payodhi     not      not\n",
+      "dharani     not      not\n",
+      "surya       not      not\n",
+      "chandu      not      not\n",
+      "random      not      not\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Exception in thread Thread-58:\n",
+      "Exception in thread Thread-8:\n",
       "Traceback (most recent call last):\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_25352/485327341.py\", line 9, in perform_operation\n",
-      "EOFError: Ran out of input\n"
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_21912/1222919197.py\", line 6, in perform_operation\n",
+      "ConnectionAbortedError: [WinError 10053] An established connection was aborted by the software in your host machine\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Active connections 7I'm running on thread <Thread(Thread-65, started 38684)>\n",
-      "\n",
-      "I'm running on thread <Thread(Thread-66, started 21616)>\n",
-      "I'm running on thread <Thread(Thread-67, started 39524)>\n",
-      "I'm running on thread <Thread(Thread-68, started 40832)>\n",
-      "I'm running on thread <Thread(Thread-69, started 13636)>\n",
-      "success\n",
-      "User : dhruv ||  File : djp ||  Authorship : owner\n",
-      "I'm running on thread <Thread(Thread-70, started 32192)>\n",
-      "I'm running on thread <Thread(Thread-71, started 21600)>\n",
-      "I'm running on thread <Thread(Thread-72, started 40356)>\n",
-      "I'm running on thread <Thread(Thread-73, started 40900)>\n",
-      "I'm running on thread <Thread(Thread-74, started 36192)>\n"
+      "Total Active connections 6\n",
+      "success\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Exception in thread Thread-64:\n",
+      "Exception in thread Thread-9:\n",
       "Traceback (most recent call last):\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_25352/485327341.py\", line 9, in perform_operation\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_21912/1222919197.py\", line 7, in perform_operation\n",
       "_pickle.UnpicklingError: could not find MARK\n"
      ]
     }
@@ -464,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6454d500",
+   "id": "e55e297f",
    "metadata": {},
    "outputs": [],
    "source": []
