--- a/server1/Server1.ipynb
+++ b/server1/Server1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "5d3c0869",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "5c593b63",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.0.0.88\n"
+      "10.200.71.141\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "7cb743bd",
    "metadata": {},
    "outputs": [],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "ddaa488e",
    "metadata": {},
    "outputs": [],
@@ -297,7 +297,15 @@
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_2976/3958610515.py\", line 14, in perform_operation\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_30696/3958610515.py\", line 14, in perform_operation\n",
+      "EOFError: Ran out of input\n",
+      "Exception in thread Thread-9:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_30696/3958610515.py\", line 14, in perform_operation\n",
       "EOFError: Ran out of input\n"
      ]
     },
@@ -305,11 +313,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Connected] Connection Established with ('10.0.0.88', 61669)\n",
+      "[Connected] Connection Established with ('10.200.71.141', 60764)\n",
+      "['createfile', 'dhruv', 'JaYAbHfT', 'IqEfdG4=']\n",
+      "createfile\n",
+      "Total Active connections 6\n",
+      "File Created: IqEfdG4=\n",
+      "[Connected] Connection Established with ('10.200.71.141', 60767)Total Active connections 6\n",
+      "\n",
+      "['createfile', 'dhruv', 'JaYAbHfT', 'IqEfdG4=']\n",
+      "createfile\n",
+      "File Created: IqEfdG4=\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-10:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_30696/3958610515.py\", line 14, in perform_operation\n",
+      "EOFError: Ran out of input\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Connected] Connection Established with ('10.200.71.141', 60770)\n",
       "['listfiles', 'dhruv']\n",
       "listfiles\n",
       "Total Active connections 6\n",
-      "['chandufile', 'dharanifile', 'djp', 'payodhifile', 'suryafile', 'common']\n",
+      "['IqEfdG4=', 'IqMd', 'JaYAbHfT']\n",
       "file list sent to user\n"
      ]
     },
@@ -317,13 +355,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Exception in thread Thread-9:\n",
+      "Exception in thread Thread-11:\n",
       "Traceback (most recent call last):\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_2976/3958610515.py\", line 14, in perform_operation\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_30696/3958610515.py\", line 14, in perform_operation\n",
       "EOFError: Ran out of input\n"
      ]
     },
@@ -331,11 +369,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Connected] Connection Established with ('10.0.0.88', 61678)\n",
-      "['writefile', 'dhruv', 'common', 'djp', 'DqBNRG7YxnzNvl0=']\n",
-      "writefileTotal Active connections 6\n",
+      "[Connected] Connection Established with ('10.200.71.141', 60864)Total Active connections 6\n",
       "\n",
-      "file data saved at server: djp\n"
+      "['readfile', 'dhruv', 'JaYAbHfT', 'IqMd']\n",
+      "readfile\n",
+      "{'status': 'correct', 'data': 'DqBNRG7YxnzNvl0='}\n",
+      "{\"status\": \"correct\", \"data\": \"DqBNRG7YxnzNvl0=\"}\n",
+      "file sent to server: IqMd\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-12:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_30696/3958610515.py\", line 14, in perform_operation\n",
+      "EOFError: Ran out of input\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Connected] Connection Established with ('10.200.71.141', 60868)Total Active connections 6\n",
+      "\n",
+      "['listfiles', 'dhruv']\n",
+      "listfiles\n",
+      "['IqEfdG4=', 'IqMd', 'JaYAbHfT']\n",
+      "file list sent to user\n"
      ]
     }
    ],
