--- a/server2/Server2.ipynb
+++ b/server2/Server2.ipynb
@@ -35,7 +35,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.0.0.88\n"
+      "10.200.71.141\n"
      ]
     }
    ],
@@ -305,7 +305,15 @@
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_34520/2357375211.py\", line 14, in perform_operation\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_41908/2357375211.py\", line 14, in perform_operation\n",
+      "EOFError: Ran out of input\n",
+      "Exception in thread Thread-9:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_41908/2357375211.py\", line 14, in perform_operation\n",
       "EOFError: Ran out of input\n"
      ]
     },
@@ -313,11 +321,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Connected] Connection Established with ('10.0.0.88', 61670)\n",
-      "['listfiles', 'dhruv']\n",
-      "listfiles\n",
+      "[Connected] Connection Established with ('10.200.71.141', 60765)\n",
+      "['createfile', 'dhruv', 'JaYAbHfT', 'IqEfdG4=']\n",
+      "createfile\n",
       "Total Active connections 6\n",
-      "['chandufile', 'dharanifile', 'djp', 'payodhifile', 'suryafile', 'common']\n",
+      "File Created: IqEfdG4=\n",
+      "[Connected] Connection Established with ('10.200.71.141', 60768)\n",
+      "['createfile', 'dhruv', 'JaYAbHfT', 'IqEfdG4=']\n",
+      "createfile\n",
+      "Total Active connections 6\n",
+      "File Created: IqEfdG4=\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-10:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_41908/2357375211.py\", line 14, in perform_operation\n",
+      "EOFError: Ran out of input\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Connected] Connection Established with ('10.200.71.141', 60771)\n",
+      "['listfiles', 'dhruv']\n",
+      "listfilesTotal Active connections 6\n",
+      "\n",
+      "['IqEfdG4=', 'IqMd', 'JaYAbHfT']\n",
       "file list sent to user\n"
      ]
     },
@@ -325,13 +363,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Exception in thread Thread-9:\n",
+      "Exception in thread Thread-11:\n",
       "Traceback (most recent call last):\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_34520/2357375211.py\", line 14, in perform_operation\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_41908/2357375211.py\", line 14, in perform_operation\n",
       "EOFError: Ran out of input\n"
      ]
     },
@@ -339,11 +377,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Connected] Connection Established with ('10.0.0.88', 61679)\n",
-      "['writefile', 'dhruv', 'common', 'djp', 'DqBNRG7YxnzNvl0=']\n",
-      "writefile\n",
+      "[Connected] Connection Established with ('10.200.71.141', 60865)\n",
+      "['readfile', 'dhruv', 'JaYAbHfT', 'IqMd']\n",
+      "readfile\n",
       "Total Active connections 6\n",
-      "file data saved at server: djp\n"
+      "{'status': 'correct', 'data': 'DqBNRG7YxnzNvl0='}\n",
+      "{\"status\": \"correct\", \"data\": \"DqBNRG7YxnzNvl0=\"}\n",
+      "file sent to server: IqMd\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-12:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_41908/2357375211.py\", line 14, in perform_operation\n",
+      "EOFError: Ran out of input\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Connected] Connection Established with ('10.200.71.141', 60869)\n",
+      "['listfiles', 'dhruv']\n",
+      "listfiles\n",
+      "Total Active connections 6\n",
+      "['IqEfdG4=', 'IqMd', 'JaYAbHfT']\n",
+      "file list sent to user\n"
      ]
     }
    ],
