--- a/server3/Server3.ipynb
+++ b/server3/Server3.ipynb
@@ -35,7 +35,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.0.0.88\n"
+      "10.200.71.141\n"
      ]
     }
    ],
@@ -315,7 +315,15 @@
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_15864/3071624367.py\", line 14, in perform_operation\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_21720/3071624367.py\", line 14, in perform_operation\n",
+      "EOFError: Ran out of input\n",
+      "Exception in thread Thread-9:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_21720/3071624367.py\", line 14, in perform_operation\n",
       "EOFError: Ran out of input\n"
      ]
     },
@@ -323,11 +331,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Connected] Connection Established with ('10.0.0.88', 61671)\n",
+      "[Connected] Connection Established with ('10.200.71.141', 60766)\n",
+      "['createfile', 'dhruv', 'JaYAbHfT', 'IqEfdG4=']\n",
+      "createfileTotal Active connections 6\n",
+      "\n",
+      "File Created: IqEfdG4=\n",
+      "[Connected] Connection Established with ('10.200.71.141', 60769)Total Active connections 6\n",
+      "\n",
+      "['createfile', 'dhruv', 'JaYAbHfT', 'IqEfdG4=']\n",
+      "createfile\n",
+      "File Created: IqEfdG4=\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-10:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_21720/3071624367.py\", line 14, in perform_operation\n",
+      "EOFError: Ran out of input\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Connected] Connection Established with ('10.200.71.141', 60772)\n",
       "['listfiles', 'dhruv']\n",
       "listfilesTotal Active connections 6\n",
       "\n",
-      "['chandufile', 'dharanifile', 'djp', 'payodhifile', 'suryafile', 'common']\n",
+      "['IqEfdG4=', 'IqMd', 'JaYAbHfT']\n",
       "file list sent to user\n"
      ]
     },
@@ -335,13 +373,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Exception in thread Thread-9:\n",
+      "Exception in thread Thread-11:\n",
       "Traceback (most recent call last):\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
       "    self.run()\n",
       "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_15864/3071624367.py\", line 14, in perform_operation\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_21720/3071624367.py\", line 14, in perform_operation\n",
       "EOFError: Ran out of input\n"
      ]
     },
@@ -349,11 +387,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Connected] Connection Established with ('10.0.0.88', 61680)\n",
-      "['writefile', 'dhruv', 'common', 'djp', 'DqBNRG7YxnzNvl0=']\n",
-      "writefileTotal Active connections 6\n",
-      "\n",
-      "file data saved at server: djp\n"
+      "[Connected] Connection Established with ('10.200.71.141', 60866)\n",
+      "['readfile', 'dhruv', 'JaYAbHfT', 'IqMd']\n",
+      "readfile\n",
+      "Total Active connections 6\n",
+      "{'status': 'correct', 'data': 'DqBNRG7YxnzNvl0='}\n",
+      "{\"status\": \"correct\", \"data\": \"DqBNRG7YxnzNvl0=\"}\n",
+      "file sent to server: IqMd\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-12:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 973, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\dhruv\\anaconda3\\lib\\threading.py\", line 910, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\dhruv\\AppData\\Local\\Temp/ipykernel_21720/3071624367.py\", line 14, in perform_operation\n",
+      "EOFError: Ran out of input\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Connected] Connection Established with ('10.200.71.141', 60870)\n",
+      "['listfiles', 'dhruv']\n",
+      "listfiles\n",
+      "Total Active connections 6\n",
+      "['IqEfdG4=', 'IqMd', 'JaYAbHfT']\n",
+      "file list sent to user\n"
      ]
     }
    ],
