--- a/Client.ipynb
+++ b/Client.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "82bd05e9",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "35510668",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.200.71.141\n"
+      "10.0.0.88\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "e9454d9a",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "ae0ff0b4",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
        "'#creating configuation file for generating client logs\\n\\n#logging.basicConfig(filename=\"client_logs.log\", encoding=\\'UTF-8\\', level=logging.DEBUG)\\nclient_logger = logging.getLogger(__name__)\\nclient_logger.setLevel(logging.INFO)\\nhandler = logging.FileHandler(\\'client_logs.log\\', \\'w\\', \\'utf-8\\')\\nhandler.setLevel(logging.INFO)\\nclient_logger.addHandler(handler)\\nformatter = logging.Formatter(\\'%(asctime)s  %(name)s  %(levelname)s: %(message)s\\')\\nhandler.setFormatter(formatter)'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,47 +83,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "e99ab18b",
    "metadata": {},
    "outputs": [],
    "source": [
     "def getKey(): #generating key with PBKDF2 for AES\n",
-    "    password = \"s3cr3t*c0d3\"\n",
-    "    passwordSalt = '76895'\n",
+    "    password = password_key\n",
+    "    passwordSalt = salt\n",
     "    key = pbkdf2.PBKDF2(password, passwordSalt).read(32)\n",
     "    return key"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "1288b16e",
    "metadata": {},
    "outputs": [],
    "source": [
     "def encrypt(plaintext): #AES data encryption\n",
-    "    aes = pyaes.AESModeOfOperationCTR(getKey(), pyaes.Counter(31129547035000047302952433967654195398124239844566322884172163637846056248223))\n",
+    "    aes = pyaes.AESModeOfOperationCTR(getKey(), pyaes.Counter(key))\n",
     "    ciphertext = aes.encrypt(plaintext)\n",
     "    return ciphertext"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "1c95f74d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def decrypt(enc): #AES data decryption\n",
-    "    aes = pyaes.AESModeOfOperationCTR(getKey(), pyaes.Counter(31129547035000047302952433967654195398124239844566322884172163637846056248223))\n",
+    "    aes = pyaes.AESModeOfOperationCTR(getKey(), pyaes.Counter(key))\n",
     "    decrypted = aes.decrypt(enc)\n",
     "    return decrypted"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "e2b0efa9",
    "metadata": {},
    "outputs": [],
@@ -160,8 +160,6 @@
     "            global dirname\n",
     "            print(\"\\nPlease enter directory name\")\n",
     "            dirname = input()\n",
-    "            dirname=encrypt(dirname)\n",
-    "            dirname = str(base64.b64encode(dirname),'utf-8')\n",
     "\n",
     "            features = []\n",
     "            features.append(\"createdir\")\n",
@@ -189,12 +187,8 @@
     "            global dirname\n",
     "            print(\"\\nPlease enter directory name to create file\")\n",
     "            dirname = input()\n",
-    "            dirname= encrypt(dirname)\n",
-    "            dirname = str(base64.b64encode(dirname),'utf-8')\n",
     "            print(\"Please enter file name\")\n",
     "            filename = input()\n",
-    "            filename= encrypt(filename)\n",
-    "            filename = str(base64.b64encode(filename),'utf-8')\n",
     "\n",
     "            features = []\n",
     "            features.append(\"createfile\")\n",
@@ -220,12 +214,8 @@
     "            global dirname, text\n",
     "            print(\"\\nPlease enter directory name to write data\")\n",
     "            dirname = input()\n",
-    "            dirname= encrypt(dirname)\n",
-    "            dirname = str(base64.b64encode(dirname),'utf-8')\n",
     "            print(\"Please enter file name\")\n",
     "            filename = input()\n",
-    "            filename= encrypt(filename)\n",
-    "            filename = str(base64.b64encode(filename),'utf-8')\n",
     "            print(\"Please enter file content\")\n",
     "            filetext = input()\n",
     "\n",
@@ -253,12 +243,8 @@
     "\n",
     "            print(\"\\nPlease enter directory name to read file\")\n",
     "            dirname = input()\n",
-    "            dirname= encrypt(dirname)\n",
-    "            dirname = str(base64.b64encode(dirname),'utf-8')\n",
     "            print(\"Please enter file name to read it\")\n",
     "            filename = input()\n",
-    "            filename= encrypt(filename)\n",
-    "            filename = str(base64.b64encode(filename),'utf-8')\n",
     "\n",
     "            features = []\n",
     "            features.append(\"readfile\")\n",
@@ -273,6 +259,11 @@
     "            result = []    \n",
     "            result = json.loads(read_data)\n",
     "            status = result['status']\n",
+    "#                 request = None\n",
+    "#                 request = read_data[0]\n",
+    "#                 print(read_data[0])\n",
+    "#                 print(read_data[1])\n",
+    "#                 print(read_data[2])\n",
     "            if status == \"correct\":\n",
     "                data = result['data']\n",
     "                if len(data) > 0:\n",
@@ -296,12 +287,8 @@
     "            global dirname\n",
     "            print(\"\\nPlease enter directory name to delete a file\")\n",
     "            dirname = input()\n",
-    "            dirname= encrypt(dirname)\n",
-    "            dirname = str(base64.b64encode(dirname),'utf-8')\n",
     "            print(\"Please enter file name to delete it\")\n",
     "            filename = input()\n",
-    "            filename= encrypt(filename)\n",
-    "            filename = str(base64.b64encode(filename),'utf-8')\n",
     "\n",
     "            features = []\n",
     "            features.append(\"deletefile\")\n",
@@ -334,16 +321,10 @@
     "\n",
     "            print(\"\\nPlease enter directory name to rename a file\")\n",
     "            dirname = input()\n",
-    "            dirname=encrypt(dirname)\n",
-    "            dirname = str(base64.b64encode(dirname),'utf-8')\n",
     "            print(\"Please enter old file name for renaming\")\n",
     "            oldname = input()\n",
-    "            oldname= encrypt(oldname)\n",
-    "            oldname = str(base64.b64encode(oldname),'utf-8')\n",
     "            print(\"Please enter new file name to rename\")\n",
     "            newname = input()\n",
-    "            newname=encrypt(newname)\n",
-    "            newname = str(base64.b64encode(newname),'utf-8')\n",
     "\n",
     "            features = []\n",
     "            features.append(\"renamefile\")\n",
@@ -379,7 +360,6 @@
     "            data = client.recv(client_buffer)\n",
     "            data = pickle.loads(data)\n",
     "            for i in data:\n",
-    "#                 print(base64.b64decode(str(i)))\n",
     "                print(i)\n",
     "            print()\n",
     "\n",
@@ -530,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1a8709ad",
    "metadata": {},
    "outputs": [
@@ -544,29 +524,7 @@
       "········\n",
       "Hello There!\n",
       "Enter the operation to be performed\n",
-      "=> readfile\n",
-      "\n",
-      "Please enter directory name to read file\n",
-      "common\n",
-      "Please enter file name to read it\n",
-      "djp\n",
-      "File Content Showing in Below lines\n",
-      "\n",
-      "\n",
-      "Hi Everyone\n",
-      "File Content ended here=================================\n",
-      "Hello There!\n",
-      "Enter the operation to be performed\n",
-      "=> listfile\n",
-      "\n",
-      "Available files for this user: dhruv\n",
-      "\n",
-      "\n",
-      "IqEfdG4=\n",
-      "IqMd\n",
-      "\n",
-      "Hello There!\n",
-      "Enter the operation to be performed\n"
+      "=> logout\n"
      ]
     }
    ],
@@ -586,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4691d1a8",
+   "id": "1122b3ba",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -594,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "35bf147c",
+   "id": "740f7fcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e88a9ec8",
+   "id": "9918fe66",
    "metadata": {},
    "outputs": [],
    "source": []
