updated encryption logic

--- a/Client-dhruv.ipynb
+++ b/Client-dhruv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "82bd05e9",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "35510668",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "127.0.0.1\n"
+      "10.200.71.141\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "e9454d9a",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "ae0ff0b4",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
        "'#creating configuation file for generating client logs\\n\\n#logging.basicConfig(filename=\"client_logs.log\", encoding=\\'UTF-8\\', level=logging.DEBUG)\\nclient_logger = logging.getLogger(__name__)\\nclient_logger.setLevel(logging.INFO)\\nhandler = logging.FileHandler(\\'client_logs.log\\', \\'w\\', \\'utf-8\\')\\nhandler.setLevel(logging.INFO)\\nclient_logger.addHandler(handler)\\nformatter = logging.Formatter(\\'%(asctime)s  %(name)s  %(levelname)s: %(message)s\\')\\nhandler.setFormatter(formatter)'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "e99ab18b",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "1288b16e",
    "metadata": {},
    "outputs": [],
@@ -105,12 +105,12 @@
     "def encrypt(plaintext): #AES data encryption\n",
     "    aes = pyaes.AESModeOfOperationCTR(getKey(), pyaes.Counter(31129547035000047302952433967654195398124239844566322884172163637846056248223))\n",
     "    ciphertext = aes.encrypt(plaintext)\n",
-    "    return ciphertext\n"
+    "    return ciphertext"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "1c95f74d",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "e2b0efa9",
    "metadata": {},
    "outputs": [],
@@ -205,11 +205,18 @@
     "            client.send(features)\n",
     "            data = client.recv(client_buffer)\n",
     "            data = data.decode(encoding_format)\n",
+    "            dirname = base64.b64decode(dirname)\n",
+    "            dirname = decrypt(dirname)\n",
+    "            dirname = dirname.decode(\"utf-8\")\n",
+    "            filename = base64.b64decode(filename)\n",
+    "            filename = decrypt(filename)\n",
+    "            filename = filename.decode(\"utf-8\")\n",
     "            available_files.append(\"files/\"+dirname+\"/\"+filename)\n",
     "\n",
     "            client.send(features)\n",
     "            print(data+\"\\n\") \n",
-    "\n",
+    "            \n",
+    "            \n",
     "######################################\n",
     "# Function to write file in Server\n",
     "######################################\n",
@@ -289,8 +296,11 @@
     "                print(\"File Content ended here=================================\")\n",
     "            else:\n",
     "                print(\"Given file does not exists\\n\")\n",
+    "                filename = base64.b64decode(filename)\n",
+    "                filename = decrypt(filename)\n",
+    "                filename = filename.decode(\"utf-8\")\n",
     "                client_logger.error(\"%s\", username, \"trying to access %s\", filename, \"-that doesn't exist\")\n",
-    "                \n",
+    "                        \n",
     "######################################\n",
     "# Function to delete file in Server\n",
     "######################################\n",
@@ -317,6 +327,12 @@
     "            client.send(features)\n",
     "            data = client.recv(client_buffer)\n",
     "            data = data.decode()\n",
+    "            dirname = base64.b64decode(dirname)\n",
+    "            dirname = decrypt(dirname)\n",
+    "            dirname = dirname.decode(\"utf-8\")\n",
+    "            filename = base64.b64decode(filename)\n",
+    "            filename = decrypt(filename)\n",
+    "            filename = filename.decode(\"utf-8\")\n",
     "            if data == 'Given file deleted':\n",
     "                for i in range(len(available_files)):\n",
     "                    names = available_files[i]\n",
@@ -360,6 +376,16 @@
     "            client.send(features)\n",
     "            data = client.recv(client_buffer)\n",
     "            data = data.decode()\n",
+    "            dirname = base64.b64decode(dirname)\n",
+    "            dirname = decrypt(dirname)\n",
+    "            dirname = dirname.decode(\"utf-8\")\n",
+    "            newname = base64.b64decode(newname)\n",
+    "            newname = decrypt(newname)\n",
+    "            newname = newname.decode(\"utf-8\")\n",
+    "            oldname = base64.b64decode(oldname)\n",
+    "            oldname = decrypt(oldname)\n",
+    "            oldname = newname.decode(\"utf-8\")\n",
+    "            \n",
     "            for i in range(len(available_files)):\n",
     "                names = available_files[i]\n",
     "                names = names.replace(\"\\\\\",\"/\")\n",
@@ -376,9 +402,20 @@
     "\n",
     "        def listFiles(username):\n",
     "            print(\"\\nAvailable files for this user: \"+username+\"\\n\\n\")\n",
-    "            for i in range(len(available_files)):\n",
-    "                print(available_files[i])\n",
+    "            features = []\n",
+    "            features.append(\"listfiles\")\n",
+    "            features.append(username)\n",
+    "            features = pickle.dumps(features)\n",
+    "            client.send(features)\n",
+    "            data = client.recv(client_buffer)\n",
+    "            data = pickle.loads(data)\n",
+    "            for i in data:\n",
+    "                i = base64.b64decode(i)\n",
+    "                i = decrypt(i)\n",
+    "                i = i.decode(\"utf-8\")\n",
+    "                print(i)\n",
     "            print()\n",
+    "            \n",
     "\n",
     "        def readFiles(username):\n",
     "            #global username\n",
@@ -403,7 +440,9 @@
     "        def change_user_permission(username):\n",
     "            #global username\n",
     "            print(\"Enter the file name whose permission needs to be updated\")\n",
-    "            file_name_to_change_permission = str(input())\n",
+    "            file_name_to_change_permission = input()\n",
+    "            file_name_to_change_permission=encrypt(file_name_to_change_permission)\n",
+    "            file_name_to_change_permission = str(base64.b64encode(file_name_to_change_permission),'utf-8')\n",
     "            print(\"Enter the user whose permission needs to be changed\")\n",
     "            user_name_to_change_permission = str(input())\n",
     "            print(\"Enter the updated permission\")\n",
@@ -421,6 +460,10 @@
     "            \n",
     "            data = client.recv(client_buffer)\n",
     "            data = data.decode()\n",
+    "            file_name_to_change_permission = base64.b64decode(file_name_to_change_permission)\n",
+    "            file_name_to_change_permission = decrypt(file_name_to_change_permission)\n",
+    "            file_name_to_change_permission = file_name_to_change_permission.decode(\"utf-8\")\n",
+    "            \n",
     "            print(data+\"\\n\")\n",
     "            \n",
     "            if data.lower() == \"permission updated\":\n",
@@ -536,16 +579,34 @@
      "output_type": "stream",
      "text": [
       "Please enter your username:\n",
-      "payodhi\n",
+      "dhruv\n",
       "Please enter your password:\n",
       "········\n",
       "Hello There!\n",
       "Enter the operation to be performed\n",
-      "=> readFile\n",
+      "=> readfile\n",
       "\n",
       "Please enter directory name to read file\n",
       "common\n",
-      "Please enter file name to read it\n"
+      "Please enter file name to read it\n",
+      "djp\n",
+      "File Content Showing in Below lines\n",
+      "\n",
+      "\n",
+      "Hi Everyone\n",
+      "File Content ended here=================================\n",
+      "Hello There!\n",
+      "Enter the operation to be performed\n",
+      "=> listfile\n",
+      "\n",
+      "Available files for this user: dhruv\n",
+      "\n",
+      "\n",
+      "IqEfdG4=\n",
+      "IqMd\n",
+      "\n",
+      "Hello There!\n",
+      "Enter the operation to be performed\n"
      ]
     }
    ],
@@ -558,6 +619,32 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4f703ee1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4691d1a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "35bf147c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(file_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e88a9ec8",
    "metadata": {},
    "outputs": [],
    "source": []
