--- a/Client-dhruv.ipynb
+++ b/Client-dhruv.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "e2b0efa9",
    "metadata": {},
    "outputs": [],
@@ -205,11 +205,18 @@
     "            client.send(features)\n",
     "            data = client.recv(client_buffer)\n",
     "            data = data.decode(encoding_format)\n",
+    "            dirname = base64.b64decode(dirname)\n",
+    "            dirname = decrypt(dirname)\n",
+    "            dirname = dirname.decode(\"utf-8\")\n",
+    "            filename = base64.b64decode(filename)\n",
+    "            filename = decrypt(filename)\n",
+    "            filename = filename.decode(\"utf-8\")\n",
     "            available_files.append(\"files/\"+dirname+\"/\"+filename)\n",
     "\n",
     "            client.send(features)\n",
     "            print(data+\"\\n\") \n",
-    "\n",
+    "            \n",
+    "            \n",
     "######################################\n",
     "# Function to write file in Server\n",
     "######################################\n",
@@ -273,6 +280,11 @@
     "            result = []    \n",
     "            result = json.loads(read_data)\n",
     "            status = result['status']\n",
+    "#                 request = None\n",
+    "#                 request = read_data[0]\n",
+    "#                 print(read_data[0])\n",
+    "#                 print(read_data[1])\n",
+    "#                 print(read_data[2])\n",
     "            if status == \"correct\":\n",
     "                data = result['data']\n",
     "                if len(data) > 0:\n",
@@ -284,8 +296,11 @@
     "                print(\"File Content ended here=================================\")\n",
     "            else:\n",
     "                print(\"Given file does not exists\\n\")\n",
+    "                filename = base64.b64decode(filename)\n",
+    "                filename = decrypt(filename)\n",
+    "                filename = filename.decode(\"utf-8\")\n",
     "                client_logger.error(\"%s\", username, \"trying to access %s\", filename, \"-that doesn't exist\")\n",
-    "                \n",
+    "                        \n",
     "######################################\n",
     "# Function to delete file in Server\n",
     "######################################\n",
@@ -312,6 +327,12 @@
     "            client.send(features)\n",
     "            data = client.recv(client_buffer)\n",
     "            data = data.decode()\n",
+    "            dirname = base64.b64decode(dirname)\n",
+    "            dirname = decrypt(dirname)\n",
+    "            dirname = dirname.decode(\"utf-8\")\n",
+    "            filename = base64.b64decode(filename)\n",
+    "            filename = decrypt(filename)\n",
+    "            filename = filename.decode(\"utf-8\")\n",
     "            if data == 'Given file deleted':\n",
     "                for i in range(len(available_files)):\n",
     "                    names = available_files[i]\n",
@@ -355,6 +376,16 @@
     "            client.send(features)\n",
     "            data = client.recv(client_buffer)\n",
     "            data = data.decode()\n",
+    "            dirname = base64.b64decode(dirname)\n",
+    "            dirname = decrypt(dirname)\n",
+    "            dirname = dirname.decode(\"utf-8\")\n",
+    "            newname = base64.b64decode(newname)\n",
+    "            newname = decrypt(newname)\n",
+    "            newname = newname.decode(\"utf-8\")\n",
+    "            oldname = base64.b64decode(oldname)\n",
+    "            oldname = decrypt(oldname)\n",
+    "            oldname = newname.decode(\"utf-8\")\n",
+    "            \n",
     "            for i in range(len(available_files)):\n",
     "                names = available_files[i]\n",
     "                names = names.replace(\"\\\\\",\"/\")\n",
@@ -379,9 +410,12 @@
     "            data = client.recv(client_buffer)\n",
     "            data = pickle.loads(data)\n",
     "            for i in data:\n",
-    "#                 print(base64.b64decode(str(i)))\n",
+    "                i = base64.b64decode(i)\n",
+    "                i = decrypt(i)\n",
+    "                i = i.decode(\"utf-8\")\n",
     "                print(i)\n",
     "            print()\n",
+    "            \n",
     "\n",
     "        def readFiles(username):\n",
     "            #global username\n",
@@ -406,7 +440,9 @@
     "        def change_user_permission(username):\n",
     "            #global username\n",
     "            print(\"Enter the file name whose permission needs to be updated\")\n",
-    "            file_name_to_change_permission = str(input())\n",
+    "            file_name_to_change_permission = input()\n",
+    "            file_name_to_change_permission=encrypt(file_name_to_change_permission)\n",
+    "            file_name_to_change_permission = str(base64.b64encode(file_name_to_change_permission),'utf-8')\n",
     "            print(\"Enter the user whose permission needs to be changed\")\n",
     "            user_name_to_change_permission = str(input())\n",
     "            print(\"Enter the updated permission\")\n",
@@ -424,6 +460,10 @@
     "            \n",
     "            data = client.recv(client_buffer)\n",
     "            data = data.decode()\n",
+    "            file_name_to_change_permission = base64.b64decode(file_name_to_change_permission)\n",
+    "            file_name_to_change_permission = decrypt(file_name_to_change_permission)\n",
+    "            file_name_to_change_permission = file_name_to_change_permission.decode(\"utf-8\")\n",
+    "            \n",
     "            print(data+\"\\n\")\n",
     "            \n",
     "            if data.lower() == \"permission updated\":\n",
